--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,13 @@
   src: url("https://uploads.codesandbox.io/uploads/user/ed077012-e728-4a42-8395-cbd299149d62/AflB-FG_Virgil.ttf");
 }
 
-.exportWrapper {
+.wrappers {
+  display: flex;
+  align-items: center;
   margin-bottom: 10px;
+}
+
+.exportWrapper {
   display: flex;
   align-items: center;
 }
