--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,14 @@ label {
   margin-right: 10px;
 }
 
+label span {
+  display: inline-block;
+}
+
+label span::first-letter {
+  text-decoration: underline;
+}
+
 input[type="number"] {
   width: 30px;
 }
