--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,8 +43,14 @@ body {
     flex-direction: column;
 
     h5 {
-      margin-top: 0px;
-      margin-bottom: 8px;
+      margin-top: 4px;
+      margin-bottom: 4px;
+      font-size: 12px;
+      color: #333;
+    }
+
+    h5:first-of-type {
+      margin-top: 0;
     }
   }
 }
@@ -155,12 +161,15 @@ button {
 .swatch {
   height: 24px;
   width: 24px;
+  display: inline;
   margin-right: 4px;
 }
 
 .swatch-input {
   font-size: 16px;
+  display: inline;
+  width: 100px;
   border-radius: 2px;
-  padding: 2px;
+  padding: 2px 4px;
   border: 1px solid #ddd;
 }
