--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* http://www.eaglefonts.com/fg-virgil-ttf-131249.htm */
 @font-face {
-  font-family: 'Virgil';
-  src: url('https://uploads.codesandbox.io/uploads/user/ed077012-e728-4a42-8395-cbd299149d62/AflB-FG_Virgil.ttf');
+  font-family: "Virgil";
+  src: url("https://uploads.codesandbox.io/uploads/user/ed077012-e728-4a42-8395-cbd299149d62/AflB-FG_Virgil.ttf");
   font-display: swap;
 }
 
@@ -58,14 +58,14 @@ body {
 .tool {
   position: relative;
 
-  input[type='radio'] {
+  input[type="radio"] {
     position: absolute;
     opacity: 0;
     width: 0;
     height: 0;
   }
 
-  input[type='radio'] {
+  input[type="radio"] {
     & + .toolIcon {
       background-color: #ddd;
 
@@ -101,11 +101,11 @@ label {
   }
 }
 
-input[type='number'] {
+input[type="number"] {
   width: 30px;
 }
 
-input[type='color'] {
+input[type="color"] {
   margin: 2px;
 }
 
