Allow color picker to be placed on top if needed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -163,6 +163,14 @@ button {
   }
 }
 
+.popover-top {
+  top: -300px;
+}
+
+.swatch-container {
+  position: relative;
+}
+
 .swatch {
   height: 24px;
   width: 24px;
