Make panels collapsible
- Add Panel component with collapse logic
- Use the component in all the necessary panel groups

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,17 @@ body {
     margin: 10px 0 10px 0;
   }
 
+  .panel {
+    position: relative;
+    .btn-panel-collapse {
+      position: absolute;
+      top: -2px;
+      right: 5px;
+      background: none;
+      margin: 0px;
+    }
+  }
+
   .panelTools {
     display: flex;
     flex-wrap: wrap;
