--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,16 @@ body {
       right: 5px;
       background: none;
       margin: 0px;
+      color: black;
+    }
+
+    .btn-panel-collapse-icon {
+      transform: none;
+      display: inline-block;
+    }
+
+    .btn-panel-collapse-icon-closed {
+      transform: rotateZ(90deg);
     }
   }
 
