--- a/src/styles.scss
+++ b/src/styles.scss
@@ -89,7 +89,6 @@ button {
 }
 
 .App-menu_top {
-  --right-menu-width: 250px;
   grid-template-columns: 1fr auto 1fr;
   align-items: flex-start;
   cursor: default;
@@ -119,14 +118,5 @@ button {
 }
 
 .App-right-menu {
-  width: var(--right-menu-width);
-}
-
-.App-filename {
-  padding-left: calc(var(--space-factor) * 2);
-  padding-right: calc(var(--space-factor) * 2);
-  padding-top: calc(var(--space-factor) * 2);
-  flex-shrink: 0;
-  flex-grow: 1;
-  display: flex;
+  width: 220px;
 }
