--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,7 +74,8 @@ button {
     border-color: #d6d4d4;
   }
 
-  &:active {
+  &:active,
+  &.active {
     background-color: #bdbebc;
     border-color: #bdbebc;
   }
