No named colors and lowercase hex

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,7 +38,7 @@ body {
       right: 5px;
       background: none;
       margin: 0px;
-      color: black;
+      color: #000;
     }
 
     .btn-panel-collapse-icon {
