--- a/src/components/ToolIcon.scss
+++ b/src/components/ToolIcon.scss
@@ -33,7 +33,7 @@
     background-color: #bdbebc;
   }
   &:focus .ToolIcon__icon {
-    box-shadow: 0 0 0 2px steelblue;
+    box-shadow: 0 0 0 2px #a5d8ff;
   }
 }
 
@@ -42,12 +42,12 @@
   opacity: 0;
 
   &:hover + .ToolIcon__icon {
-    background-color: #e7e5e5;
+    background-color: #e9ecef;
   }
   &:checked + .ToolIcon__icon {
-    background-color: #bdbebc;
+    background-color: #ced4da;
   }
   &:focus + .ToolIcon__icon {
-    box-shadow: 0 0 0 2px steelblue;
+    box-shadow: 0 0 0 2px #a5d8ff;
   }
 }
