--- a/src/components/ToolIcon.scss
+++ b/src/components/ToolIcon.scss
@@ -27,10 +27,10 @@
   font-size: inherit;
 
   &:hover .ToolIcon__icon {
-    background-color: #e7e5e5;
+    background-color: #e9ecef;
   }
   &:active .ToolIcon__icon {
-    background-color: #bdbebc;
+    background-color: #ced4da;
   }
   &:focus .ToolIcon__icon {
     box-shadow: 0 0 0 2px #a5d8ff;
