--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,7 +48,7 @@ body {
 
 .divider {
   width: 1px;
-  background-color: #ddd;
+  background-color: #e9ecef;
   margin: 1px;
 }
 
@@ -59,7 +59,7 @@ input:focus {
 
 button {
   background-color: #e9ecef;
-  border: 1px solid #ccc;
+  border: 1px solid #dee2e6;
   border-radius: 4px;
   margin: 2px 0;
   padding: 5px;
@@ -71,12 +71,12 @@ button {
 
   &:hover {
     background-color: #ced4da;
-    border-color: #adb5bd;
+    border-color: #ced4da;
   }
 
   &:active {
-    background-color: #adb5bd;
-    border-color: #adb5bd;
+    background-color: #ced4da;
+    border-color: #ced4da;
   }
 
   &:disabled {
@@ -85,9 +85,9 @@ button {
 }
 
 .active {
-  background-color: #adb5bd;
+  background-color: #ced4da;
   &:hover {
-    background-color: #adb5bd;
+    background-color: #ced4da;
   }
 }
 
