--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,7 +30,7 @@ body {
     margin-top: 4px;
     margin-bottom: 4px;
     font-size: 12px;
-    color: #333;
+    color: var(--text-color-primary);
   }
 
   h5:first-child {
