--- a/src/components/ColorPicker.css
+++ b/src/components/ColorPicker.css
@@ -70,7 +70,7 @@
   width: 30px;
   border-radius: 4px 0px 0px 4px;
   float: left;
-  color: #343a40;
+  color: #868e96;
   display: flex;
   align-items: center;
   justify-content: center;
