--- a/src/styles.scss
+++ b/src/styles.scss
@@ -151,7 +151,7 @@ button {
     justify-content: center;
 
     padding: 40px;
-    background: #fdf4f5;
+    background-color: #fdf4f5;
     border: 3px solid #d72b3f;
   }
 
