use open-color colors

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -151,8 +151,8 @@ button {
     justify-content: center;
 
     padding: 40px;
-    background-color: #fdf4f5;
-    border: 3px solid #d72b3f;
+    background-color: #fff5f5;
+    border: 3px solid #c92a2a;
   }
 
   .ErrorSplash-paragraph {
