use Cascadia font

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -178,6 +178,8 @@ button {
     textarea {
       width: 100%;
       margin: 10px 0;
+      font-family: "Cascadia";
+      font-size: 0.8em;
     }
   }
 }
