--- a/src/styles.scss
+++ b/src/styles.scss
@@ -183,3 +183,26 @@ button {
     }
   }
 }
+
+.langBox {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  margin-right: 1em;
+  ul > li {
+    list-style: none;
+    display: inline-block;
+    padding: 4px;
+  }
+  li > a,
+  li > a:visited {
+    text-decoration: none;
+    color: gray;
+    font-size: 0.8em;
+  }
+  li.current > a,
+  li.current > a:visited {
+    color: black;
+    text-decoration: underline;
+  }
+}
