--- a/src/styles.scss
+++ b/src/styles.scss
@@ -210,3 +210,13 @@ button {
     text-decoration: underline;
   }
 }
+
+.visually-hidden {
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  white-space: nowrap; /* added line */
+}
