remove top/left margin to limit unusable canvas area

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -190,7 +190,8 @@ button {
   bottom: 0;
   min-width: 5.5rem;
   height: 2rem;
-  margin: 0.5em;
+  margin-bottom: 0.5em;
+  margin-right: 0.5em;
   padding: 0.5em;
   background-color: #e9ecef;
   border-radius: var(--space-factor);
