Adjust language selector

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -188,14 +188,13 @@ button {
   position: absolute;
   right: 0;
   bottom: 0;
-  min-width: 5.5rem;
-  height: 2rem;
-  margin-bottom: 0.5em;
-  margin-right: 0.5em;
-  padding: 0.5em;
+  height: 1.5rem;
+  margin-bottom: 0.5rem;
+  margin-right: 0.5rem;
+  padding: 0 1.5rem 0 0.5rem;
   background-color: #e9ecef;
   border-radius: var(--space-factor);
-  border: none;
+  border: 1px solid #ced4da;
   font-size: 0.8em;
   outline: none;
   appearance: none;
