--- a/src/styles.scss
+++ b/src/styles.scss
@@ -195,12 +195,12 @@ button {
   background-color: #e9ecef;
   border-radius: var(--space-factor);
   border: 1px solid #ced4da;
-  font-size: 0.8em;
+  font-size: 0.8rem;
   outline: none;
   appearance: none;
   background-image: url("https://free-use.s3-us-west-2.amazonaws.com/up-sort.svg");
   background-repeat: no-repeat;
-  background-position: right 0.7em top 50%, 0 0;
+  background-position: right 0.7rem top 50%, 0 0;
   background-size: 0.65em auto, 100%;
 
   &:focus {
