--- a/src/styles.scss
+++ b/src/styles.scss
@@ -257,18 +257,17 @@ button,
 }
 
 .copyExportUrlWrapper {
-  display: table;
-  input,
-  span {
-    display: table-cell;
-  }
+  display: contents;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .copyExportUrlInput {
-  width: 17em;
   font-size: 1rem;
   color: #343a40;
   border: 0px;
   outline: none;
   height: 1.75em;
+  width: auto;
 }
