Ability to have id selected when loaded and margin for dropdown button

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -253,10 +253,11 @@ button,
 
 .stored-ids-select {
   @extend .dropdown-select;
-  padding: 0.5em 0.5em 0.5em 1.7em;
+  padding: 0 0.5em 0 1.7em;
   bottom: 0;
   left: 0;
   background-position: left 0.7em top 50%, 0 0;
+  margin-left: 0.5em;
 }
 
 .visually-hidden {
