--- a/src/components/ProjectName.css
+++ b/src/components/ProjectName.css
@@ -1,4 +1,4 @@
-.project-name {
+.ProjectName {
   display: inline-block;
   cursor: pointer;
   border: none;
@@ -9,11 +9,11 @@
   border-radius: var(--space-factor);
 }
 
-.project-name:hover {
+.ProjectName:hover {
   background-color: #eee;
 }
 
-.project-name:focus {
+.ProjectName:focus {
   outline: none;
   box-shadow: 0 0 0 2px steelblue;
 }
