--- a/src/components/ToolIcon.scss
+++ b/src/components/ToolIcon.scss
@@ -83,3 +83,12 @@
     box-shadow: none;
   }
 }
+
+.ToolIcon__keybinding {
+  position: absolute;
+  bottom: 2px;
+  right: 2px;
+  font-size: 0.1em;
+  color: #aaa;
+  font-family: Arial, Helvetica, sans-serif;
+}
