tweak position and color

--- a/src/components/ToolIcon.scss
+++ b/src/components/ToolIcon.scss
@@ -87,8 +87,8 @@
 .ToolIcon__keybinding {
   position: absolute;
   bottom: 2px;
-  right: 2px;
+  right: 3px;
   font-size: 0.5em;
-  color: #aaa;
+  color: #adb5bd; // OC GRAY 5
   font-family: Arial, Helvetica, sans-serif;
 }
