make z-index buttons all the same width

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -258,6 +258,10 @@ button,
   white-space: nowrap; /* added line */
 }
 
+.zIndexButton {
+  width: 90px;
+}
+
 .scroll-back-to-content {
   position: fixed;
   left: 50%;
