--- a/src/components/ToolIcon.scss
+++ b/src/components/ToolIcon.scss
@@ -60,6 +60,9 @@
   &:focus + .ToolIcon__icon {
     box-shadow: 0 0 0 2px #a5d8ff;
   }
+  &:active + .ToolIcon__icon {
+    background-color: #adb5bd;
+  }
 }
 
 .ToolIcon.ToolIcon__lock {
