--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,7 +100,7 @@ button,
   }
 
   &:active {
-    background-color: #ced4da;
+    background-color: #adb5bd;
   }
 
   &:disabled {
@@ -113,6 +113,9 @@ button,
   background-color: #ced4da;
   &:hover {
     background-color: #ced4da;
+  }
+  &:active {
+    background-color: #adb5bd;
   }
 }
 
