--- a/src/styles.scss
+++ b/src/styles.scss
@@ -198,7 +198,7 @@ button,
     textarea {
       width: 100%;
       margin: 10px 0;
-      font-family: "Cascadia";
+      font-family: "Victor Mono";
       font-size: 0.8em;
     }
   }
