--- a/src/components/ToolIcon.scss
+++ b/src/components/ToolIcon.scss
@@ -1,7 +1,7 @@
 .ToolIcon {
   display: inline-block;
   position: relative;
-  font-family: Cascadia;
+  font-family: "Victor Mono";
   cursor: pointer;
 }
 
