--- a/src/components/HintViewer.css
+++ b/src/components/HintViewer.css
@@ -1,9 +1,10 @@
 .HintViewer {
-  color: #adb5bd; /* OC: GRAY 5*/
+  background-color: rgba(255, 255, 255, 0.88);
+  color: #868e96; /* OC: GRAY 6*/
   font-size: 0.8rem;
+  left: 50%;
+  pointer-events: none;
   position: absolute;
   top: 54px;
-  left: 50%;
-  /* the 16px is a hardcoded 1/2 of lock icon */
-  transform: translateX(calc(-50% - 16px));
+  transform: translateX(calc(-50% - 16px)); /* 16px is half of lock icon */
 }
