--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,8 @@
 
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  --ui-font: Arial, Helvetica, sans-serif;
+  font-family: var(--ui-font);
   color: var(--text-color-primary);
 }
 
@@ -91,6 +92,7 @@ input:focus {
 
 button,
 .buttonList label {
+  user-select: none;
   background-color: #e9ecef;
   border: 0;
   border-radius: 4px;
@@ -126,6 +128,42 @@ button,
   &:active {
     background-color: #adb5bd;
   }
+}
+
+.App-toolbar {
+  --spacing: 0.5rem;
+  padding: var(--spacing);
+  padding-bottom: #{"max(var(--spacing), env(safe-area-inset-bottom))"};
+  padding-left: #{"max(var(--spacing), env(safe-area-inset-left))"};
+  padding-right: #{"max(var(--spacing), env(safe-area-inset-right))"};
+  width: 100%;
+  box-sizing: border-box;
+  overflow: auto;
+  position: absolute;
+  bottom: 0;
+  height: 3.5rem;
+}
+.App-toolbar-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.App-toolbar,
+.App-mobile-menu {
+  background: #fcfcfc;
+  border-top: 1px solid #ccc;
+}
+.App-mobile-menu {
+  display: grid;
+  position: fixed;
+  width: 100%;
+  bottom: calc(3.5rem - 1px);
+  bottom: calc(3.5rem - 1px + env(safe-area-inset-bottom));
+  z-index: 1;
+}
+.App-mobile-menu .Island {
+  background: #fcfcfc;
+  box-shadow: none;
 }
 
 .App-menu {
@@ -302,4 +340,14 @@ button,
   bottom: 20px;
   transform: translateX(-50%);
   padding: 10px 20px;
+}
+
+@media (max-width: 600px), (max-height: 500px) {
+  aside {
+    display: none;
+  }
+  .scroll-back-to-content {
+    bottom: 70px;
+    bottom: calc(70px + env(safe-area-inset-bottom));
+  }
 }
