--- a/src/components/HintViewer.css
+++ b/src/components/HintViewer.css
@@ -5,7 +5,7 @@
   font-size: 0.8rem;
 }
 
-@media (max-width: 600px), (max-height: 500px) {
+@media (max-width: 600px), (max-height: 500px) and (max-width: 1000px) {
   .HintViewer {
     position: static;
     margin-top: 0.5rem;
