--- a/src/styles.scss
+++ b/src/styles.scss
@@ -264,8 +264,11 @@ button,
 
   .ErrorSplash-paragraph {
     margin: 15px 0;
-    text-align: center;
     max-width: 600px;
+
+    &.align-center {
+      text-align: center;
+    }
   }
 
   .bigger,
