override user-select for error splash screen

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -250,6 +250,7 @@ button,
   display: flex;
   align-items: center;
   justify-content: center;
+  user-select: text;
 
   .ErrorSplash-messageContainer {
     display: flex;
