--- a/src/styles.scss
+++ b/src/styles.scss
@@ -189,7 +189,7 @@ button,
 }
 
 .App-menu_top {
-  grid-template-columns: 1fr auto 1fr;
+  grid-template-columns: auto 1fr;
   align-items: flex-start;
   cursor: default;
   pointer-events: none !important;
