add color comments

--- a/src/components/RoomDialog.scss
+++ b/src/components/RoomDialog.scss
@@ -3,8 +3,8 @@
   margin-left: 1rem;
 
   &.is-collaborating {
-    background-color: #ebfbee;
-    color: #2b8a3e;
+    background-color: #ebfbee; // OC GREEN-0
+    color: #2b8a3e; // OC GREEN-9
   }
 }
 
