Use Cascadia to render hex codes so they are consistent
(It’s a little heavy, but variable weights are planned for this month)

--- a/src/components/ColorPicker.css
+++ b/src/components/ColorPicker.css
@@ -130,6 +130,7 @@
   padding: 1px;
   padding-left: 0.5em;
   appearance: none;
+  font-family: Cascadia, monospace;
 }
 
 .color-picker-label-swatch {
