--- a/src/components/ToolIcon.scss
+++ b/src/components/ToolIcon.scss
@@ -13,6 +13,7 @@
   cursor: pointer;
   background-color: var(--button-gray-1);
   -webkit-tap-highlight-color: transparent;
+  border-radius: var(--space-factor);
 }
 
 .ToolIcon__icon {
