--- a/src/components/ColorPicker.css
+++ b/src/components/ColorPicker.css
@@ -4,7 +4,7 @@
   border: 0px solid rgba(0, 0, 0, 0.25);
   box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 4px;
   border-radius: 4px;
-  position: relative;
+  position: absolute;
 }
 
 .color-picker-control-container {
@@ -36,10 +36,10 @@
 }
 
 .color-picker-content {
-  padding: 1rem 0.5rem 0.5rem 1rem;
+  padding: 0.5rem 0.5rem;
   display: grid;
   grid-template-columns: repeat(5, auto);
-  grid-gap: 0.375rem;
+  grid-gap: 0.5rem;
 }
 
 .color-picker-content .color-input-container {
