--- a/src/components/ExportDialog.scss
+++ b/src/components/ExportDialog.scss
@@ -28,16 +28,21 @@
   margin: auto;
 }
 
-@media #{$media-query} {
+@media (max-width: 550px) {
   .ExportDialog {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 5rem);
-
-    > :last-child {
-      margin: auto;
-    }
   }
+  .ExportDialog__actions {
+    flex-direction: column;
+    align-items: center;
+  }
+  .ExportDialog__actions > * {
+    margin-bottom: calc(var(--space-factor) * 3);
+  }
+}
+
+@media #{$media-query} {
   .ExportDialog__preview canvas {
     max-height: 30vh;
   }
@@ -48,12 +53,5 @@
   }
   .ExportDialog__dialog .Island {
     overflow-y: auto;
-  }
-  .ExportDialog__actions {
-    flex-direction: column;
-    align-items: center;
-  }
-  .ExportDialog__actions > * {
-    margin-bottom: calc(var(--space-factor) * 3);
   }
 }
