Fix positioning bug in safari
See this comment: https://github.com/excalidraw/excalidraw/pull/1054#issuecomment-602652568

--- a/src/components/ToolIcon.scss
+++ b/src/components/ToolIcon.scss
@@ -123,6 +123,7 @@
 
 @media (max-width: 360px) {
   .ToolIcon.ToolIcon__lock {
+    display: inline-block;
     position: absolute;
     top: 60px;
     right: -8px;
