--- a/src/components/HintViewer.scss
+++ b/src/components/HintViewer.scss
@@ -1,12 +1,11 @@
 @import "../_variables";
 
 .HintViewer {
-  color: #868e96; /* OC: GRAY 6*/
   font-size: 0.8rem;
   left: 50%;
   pointer-events: none;
   position: absolute;
-  top: 54px;
+  top: 56px;
   transform: translateX(calc(-50% - 16px)); /* 16px is half of lock icon */
   @media #{$media-query} {
     position: static;
@@ -16,7 +15,7 @@
   }
 
   > span {
-    background-color: rgba(255, 255, 255, 0.88);
+    background-color: #ffd43b; /* OC YELLOW 4 */
     padding: 0.2rem 0.4rem;
     border-radius: 3px;
   }
