--- a/src/components/ToolIcon.scss
+++ b/src/components/ToolIcon.scss
@@ -32,11 +32,7 @@
   }
 
   & + .ToolIcon__label {
-    margin-left: 0;
-    &.rtl {
-      margin-right: 0;
-      margin-left: 0.8em;
-    }
+    margin-inline-start: 0;
   }
 }
 
