Make only mid-left panel scrollable

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -228,9 +228,6 @@ button,
 
 .App-menu_top > *:first-child {
   justify-self: flex-start;
-  overflow-y: scroll;
-  max-height: calc(100vh - 60px);
-  padding: 5px;
 }
 
 .App-menu_top > *:last-child {
@@ -239,13 +236,12 @@ button,
 
 .App-menu_bottom {
   position: fixed;
-  bottom: var(--margin);
+  bottom: 0;
   grid-template-columns: 1fr auto 1fr;
   grid-gap: 4px;
   align-items: flex-start;
   cursor: default;
   pointer-events: none !important;
-  padding: 5px;
 }
 
 .App-menu_bottom > * {
@@ -268,6 +264,12 @@ button,
 .App-menu_right {
   grid-template-rows: 1fr;
   height: 100%;
+}
+
+.App-menu__left--scrollable {
+  overflow-y: scroll;
+  max-height: calc(100vh - 204px);
+  box-shadow: var(--shadow-island);
 }
 
 .ErrorSplash {
