Optimize ShortcutsDialog style

--- a/src/components/Island.css
+++ b/src/components/Island.css
@@ -1,5 +1,6 @@
 .Island {
   --padding: 0;
+  word-break: keep-all;
   background-color: var(--bg-color-main);
   box-shadow: var(--shadow-island);
   border-radius: var(--border-radius-m);
