--- a/src/css/fonts.scss
+++ b/src/css/fonts.scss
@@ -1,13 +1,13 @@
 /* http://www.eaglefonts.com/fg-virgil-ttf-131249.htm */
 @font-face {
   font-family: "Virgil";
-  src: url("FG_Virgil.ttf");
+  src: url("../fonts/FG_Virgil.ttf");
   font-display: swap;
 }
 
 /* https://github.com/microsoft/cascadia-code */
 @font-face {
   font-family: "Cascadia";
-  src: url("Cascadia.ttf");
+  src: url("../fonts/Cascadia.ttf");
   font-display: swap;
 }
