--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,5 +1,6 @@
-@import "./theme.css";
 @import "./_variables";
+@import "./theme";
+@import "./fonts";
 
 :root {
   --sat: env(safe-area-inset-top);
