Add PWACompat (attempt) Fixes #1425

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -15,8 +15,8 @@
 
 body {
   margin: 0;
-  --ui-font: BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Helvetica,
-    Arial, sans-serif;
+  --ui-font: system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto,
+    Helvetica, Arial, sans-serif;
   font-family: var(--ui-font);
   color: var(--text-color-primary);
   -webkit-text-size-adjust: 100%;
